--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.0",
+    "@headlessui/react": "^1.4.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "dotenv": "^10.0.0",
+    "dotenv-cra": "^3.0.2",
     "firebase": "^9.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
